--- a/VinylDestinationV1/src/app/vinyl-card/vinyl-card.component.html
+++ b/VinylDestinationV1/src/app/vinyl-card/vinyl-card.component.html
@@ -1,5 +1,21 @@
-<div style="outline: black; outline-width: thin;">
-    <h1>
-        {{vinylName}}
-    </h1>
+<div style="outline: black; outline-width: thin; margin: 1rem; outline-style: solid; height: 15rem;">
+   
+    <img src="assets/vinyl-record-temp-image.webp"  class="center">  
+    <div class="row">  
+
+        <h1 class="col-12 vinylTitle truncate" style="text-align: center;">
+            <a>{{vinylName}}</a>
+        </h1>
+
+    </div>
+    <div class="row">
+        <h2 class="col-12 artistText truncate"><a>By Band</a></h2>
+    </div>
+
+    <div class="row">
+        <a>View Vinyl 
+            <!-- <span>&rarr;</span> -->
+        </a>
+    </div>
+   
 </div> 
