--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   <!-- <router-outlet></router-outlet>
   </div> -->
 
-  <amplify-authenticator>
+  <!-- <amplify-authenticator>
     <ng-template
       amplifySlot="authenticated"
       let-user="user"
@@ -38,4 +38,5 @@
     <app-staging-api></app-staging-api>
     <button (click)="signOut()">Sign Out</button>
     </ng-template>
-  </amplify-authenticator>
+  </amplify-authenticator> -->
+<router-outlet></router-outlet>
