created more UI, removed amplify project

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,7 +17,18 @@
 
 
 .nav-button{
-    outline: black;
-    outline-style: groove;
+    outline: brown;
+    outline-style: double;
     outline-width: thin;
+    text-align: center;
+}
+
+.page-header {
+    outline-width: 3px;
+    outline-color: brown;
+    outline-style: double;
+}
+
+.footer-col {
+    margin: auto;
 }
