--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,35 @@
-<!-- <!doctype html>
-<head>
-  <meta charset="utf-8">
-  <title>Vinyl Destination</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<header class="head">
+ <!doctype html>
+
+<header class="head" style="background-color: bisque;">
   <div class="row">
     <div class="large-6" style="text-align: center;">
-      <h1>Vinyl Destination</h1>
+      <h1 class="font-test">Vinyl Destination</h1>
     </div>
   </div>
-  <div class="row"> -->
-    <!-- <nav> -->
-      <!-- <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page"> <h2>All Vinyls</h2></a></div>
-      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page">60s</a></div>
-      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page">70s</a></div>
-      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page">80s</a></div> -->
-    <!-- </nav> -->
-  <!-- </div> -->
+  <div class="row page-header"> 
+    <div class="col-2 nav-button"><p></p></div>
+       <div class="col-2 nav-button"><a href="./"> <h2>All Vinyls</h2></a></div>
+      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page"><h2>60s</h2></a></div>
+      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page"><h2>70s</h2></a></div>
+      <div class="col-2 nav-button"><a class="board" routerLink="/next" routerLinkActive="active" ariaCurrentWhenActive="page"><h2>80s</h2></a></div> 
+      <div class="col-2 nav-button" style="padding-top: 0.5rem;"><a href="./login"><h5>Log in/Sign up</h5></a></div> 
+   </div> 
 
-<!-- </header> -->
-
-<!-- <div> -->
-  <!-- The routed views render in the <router-outlet>-->
-  <!-- <router-outlet></router-outlet>
-  </div> -->
-
-  <!-- <amplify-authenticator>
-    <ng-template
-      amplifySlot="authenticated"
-      let-user="user"
-      let-signOut="signOut"
-    >
-    <app-staging-api></app-staging-api>
-    <button (click)="signOut()">Sign Out</button>
-    </ng-template>
-  </amplify-authenticator> -->
+ </header> 
 <router-outlet></router-outlet>
+<footer style="outline-style: groove; outline-color: black; outline-width: 1px; height: 20rem; background-color: burlywood; padding: 3rem;">
+  <div class="row">
+    <div class="col-2 footer-col">
+      <div class="row"><h5>Visit Us Here</h5></div>
+      <div class="row"><a>Donate Here</a></div>
+      <div class="row"><a>Social Media Links</a></div>
+      <div class="row"><a>Other</a></div>
+    </div>
+    <div class="col-2 footer-col">
+      <div class="row"><h5>Account Links</h5></div>
+      <div class="row"><a href="./login" routerLinkActive="router-link-active" >Log in</a></div>
+      <div class="row"><a>Account Settings</a></div>
+      <div class="row"><a>Sign Out</a></div>
+    </div>
+  </div>
+</footer>
