--- a/src/app/vinyl-card/vinyl-card.component.html
+++ b/src/app/vinyl-card/vinyl-card.component.html
@@ -1,4 +1,4 @@
-<div style="outline: black; outline-width: thin; margin: 1rem; outline-style: solid; height: 15rem;">
+<div style="outline: black; outline-width: thin; margin: 1rem; outline-style: solid; height: 16rem;">
    
     <img src="assets/vinyl-record-temp-image.webp"  class="center">  
     <div class="row">  
@@ -12,9 +12,8 @@
         <h2 class="col-12 artistText truncate"><a>By Band</a></h2>
     </div>
 
-    <div class="row">
-        <a>View Vinyl 
-            <!-- <span>&rarr;</span> -->
+    <div class="row" style="text-align: right; padding-right: 0.5rem;">
+        <a href="./view">View Vinyl 
         </a>
     </div>
    
